--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,20 +6,26 @@
     <td>
     <%= image_tag(product.image_url, class: 'list_image') %> 
     </td>
+
 <td class="list_description"> 
   <dl>
-  <dt><%= product.title %></dt>
-  <dd><%= truncate(strip_tags(product.description), length: 80) %></dd> 
+    <dt><%= product.title %></dt>
+    <dd><%= truncate(strip_tags(product.description), length: 80) %></dd> 
   </dl>
 </td>
-<td class="list_actions">
+
+  <td class="list_actions">
   <%= link_to 'Show', product %><br/>
-  <%= link_to 'Edit', edit_product_path(product) %><br/> <%= link_to 'Destroy', product, method: :delete,
-</td> 
+  <%= link_to 'Edit', edit_product_path(product) %><br/> 
+  <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+  </td> 
 
 </tr>
+
 <% end %> 
+
 </table> 
+
 <br />
 
 <%= link_to 'New Product', new_product_path %>
