Added controller tests

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -3,16 +3,19 @@
 <% end %>
 
 <h1>Your Product Catalog</h1>
-
+<% cache ['store', Product.latest] do %>
 <% @products.each do |product| %>
-	<div class = "entry">
-		<%= image_tag(product.image_url) %>
-		<h3><%= product.title %></h3>
-		<%= sanitize(product.description) %>
+	<% cache ['entry', product] do %>
+			<div class = "entry">
+			<%= image_tag(product.image_url) %>
+			<h3><%= product.title %></h3>
+			<%= sanitize(product.description) %>
 		
-		<div class = "price_line">
-			<span class = "price" ><%= product.price %></span>
-		</div>
+			<div class = "price_line">
+				<span class="price"><%= number_to_currency(product.price) %></span>
+			</div>
 
-	</div>
+			</div>
+		<% end %>
+	<% end %>
 <% end %>
